syntax = "proto3";

package auth;
option go_package="./authRpc";

message ConnRequest {
  uint32 work_id = 1;
  uint32 user_id = 2;
}

message Empty {}

service auth {
  rpc UserConnStatus (ConnRequest) returns (Empty); // 响应长连接服务器的登陆请求
}