syntax = "proto3";

package groupRpc;
option go_package = "./groupRpc";

message GroupMembersRequest {
  uint32 id = 1;
}

message GroupMembersResponse {
  repeated uint32 ids = 1;
}

service Group {
  rpc GetGroupMembers(GroupMembersRequest) returns (GroupMembersResponse);
}